# gloperate

./: .gitignore  AUTHORS  CMakeLists.txt  Dockerfile  LICENSE  README.md  gloperate-config.cmake
_backup/examples/osg-painters/: CMakeLists.txt
data/: .gitignore
source/: CMakeLists.txt  gloperate-version.h.in
source/applications/: CMakeLists.txt
source/applications/gloperate-viewer/: Application.cpp  Application.h  CMakeLists.txt  Config.cpp  Config.h  main.cpp
source/codegeneration/: gloperate_features.h
source/examples/: CMakeLists.txt
source/examples/BasicExamples/: CMakeLists.txt
source/examples/ExampleSimpleTexture/: CMakeLists.txt
source/examples/ExtendedExamples/: CMakeLists.txt
source/examples/ExtendedViewerQt/: CMakeLists.txt  main.cpp
source/examples/OsgExamples/: CMakeLists.txt
source/examples/PipelineExamples/: CMakeLists.txt
source/examples/ViewerGLFW/: CMakeLists.txt  ExampleWindowEventHandler.cpp  ExampleWindowEventHandler.h  main.cpp
source/examples/ViewerQt/: CMakeLists.txt  ExampleWindow.cpp  ExampleWindow.h  QtViewerMapping.cpp  QtViewerMapping.h  TimePropagator.cpp  TimePropagator.h  main.cpp
source/examples/basic-examples/: CMakeLists.txt
source/examples/basic-painters/: CMakeLists.txt
source/examples/demo-stages/: AntialiasableTriangleStage.cpp  AntialiasingRenderingPipeline.cpp  CMakeLists.txt  ColorizeStage.cpp  ColorizeStage.h  DOFCubeStage.cpp  DemoAntialiasableTriangleStage.cpp  DemoAntialiasableTriangleStage.h  DemoAntialiasingAggregationPipeline.cpp  DemoAntialiasingAggregationPipeline.h  DemoAntialiasingPipeline.cpp  DemoAntialiasingPipeline.h  DemoAntialiasingRenderingPipeline.cpp  DemoAntialiasingRenderingPipeline.h  DemoDOFAggregationPipeline.cpp  DemoDOFAggregationPipeline.h  DemoDOFCubeStage.cpp  DemoDOFCubeStage.h  DemoDOFPipeline.cpp  DemoDOFPipeline.h  DemoDOFRenderingPipeline.cpp  DemoDOFRenderingPipeline.h  DemoDrawableStage.cpp  DemoDrawableStage.h  DemoMultiFramePipeline.cpp  DemoMultiFramePipeline.h  DemoPipeline.cpp  DemoPipeline.h  DemoRenderStage.cpp  DemoRenderStage.h  DemoSSAOAggregationPipeline.cpp  DemoSSAOAggregationPipeline.h  DemoSSAOPipeline.cpp  DemoSSAOPipeline.h  DemoSSAOPostprocessingStage.cpp  DemoSSAOPostprocessingStage.h  DemoSSAORenderingPipeline.cpp  DemoSSAORenderingPipeline.h  DemoSSAORenderingStage.cpp  DemoSSAORenderingStage.h  (+28 more)
source/examples/demo-stages-plugins/: AntialiasableTriangleStage.cpp  AntialiasableTriangleStage.h  AntialiasingRenderingPipeline.cpp  AntialiasingRenderingPipeline.h  AssimpMeshLoader.cpp  AssimpMeshLoader.h  CMakeLists.txt  ColorDemo.cpp  ColorDemo.h  ColorGradientDemo.cpp  ColorGradientDemo.h  ColorizeStage.cpp  ColorizeStage.h  DOFCubeStage.cpp  DOFCubeStage.h  DOFRenderingPipeline.cpp  DOFRenderingPipeline.h  DemoAntialiasableTriangleStage.cpp  DemoAntialiasableTriangleStage.h  DemoAntialiasingAggregationPipeline.cpp  DemoAntialiasingAggregationPipeline.h  DemoAntialiasingPipeline.cpp  DemoAntialiasingPipeline.h  DemoDOFAggregationPipeline.cpp  DemoDOFAggregationPipeline.h  DemoDOFCubeStage.cpp  DemoDOFCubeStage.h  DemoDOFPipeline.h  DemoDrawableStage.cpp  DemoDrawableStage.h  DemoMultiFrameAggregationPipeline.cpp  DemoMultiFrameAggregationPipeline.h  DemoMultiFrameEffectsPipeline.cpp  DemoMultiFrameEffectsPipeline.h  DemoMultiFramePipeline.h  DemoPipeline.cpp  DemoPipeline.h  DemoRenderStage.cpp  DemoRenderStage.h  DemoSSAOAggregationPipeline.cpp  (+52 more)
source/examples/extended-painters/: CMakeLists.txt
source/examples/globjects-painters/: CMakeLists.txt  plugin.cpp
source/examples/gloperate-ffmpeg-example/: CMakeLists.txt  main.cpp
source/examples/gloperate-glfw-example/: CMakeLists.txt  main.cpp
source/examples/gloperate-glheadless-example/: CMakeLists.txt  main.cpp
source/examples/gloperate-headless-example/: CMakeLists.txt  main.cpp
source/examples/gloperate-qt-example/: CMakeLists.txt  main.cpp
source/examples/gloperate-qt-glheadless-example/: CMakeLists.txt  main.cpp
source/examples/gloperate-qtquick-example/: CMakeLists.txt  TreeNode.cpp  TreeNode.h  main.cpp
source/examples/gloperate-text-demo/: CMakeLists.txt  main.cpp
source/examples/gloperate-text-example/: CMakeLists.txt  GlyphSequenceDemoStage.cpp  GlyphSequenceDemoStage.h  TextRenderingPipeline.cpp  TextRenderingPipeline.h  main.cpp
source/examples/gloperate-text-painters/: CMakeLists.txt  plugin.cpp
source/examples/gloperate-videotool-example/: CMakeLists.txt  main.cpp
source/examples/minimal-glfw-example/: CMakeLists.txt  main.cpp
source/examples/minimal-qt-example/: CMakeLists.txt  QtViewerMapping.cpp  QtViewerMapping.h  main.cpp
source/examples/osg-painters/: CMakeLists.txt  plugin.cpp
source/examples/pipeline-painters/: CMakeLists.txt  plugin.cpp
source/examples/viewer-glfw/: CMakeLists.txt  main.cpp
source/examples/viewer-qt/: CMakeLists.txt  CMakeLists.txt.orig  QtViewerMapping.cpp  QtViewerMapping.h  main.cpp  main.cpp.orig
source/examples/viewer-qt-extended/: CMakeLists.txt  main.cpp
source/gloperate/: CMakeLists.txt
source/gloperate-assimp/: CMakeLists.txt
source/gloperate-assimp/source/: AssimpLoader.cpp  AssimpMeshLoader.cpp  AssimpProcessing.cpp  AssimpSceneLoader.cpp  PolygonalDrawable.cpp  PolygonalGeometry.cpp
source/gloperate-ffmpeg/: CMakeLists.txt
source/gloperate-ffmpeg/source/: FFMPEGVideoExporter.cpp  VideoEncoder.cpp  VideoTool.cpp
source/gloperate-glfw/: CMakeLists.txt
source/gloperate-glheadless/: CMakeLists.txt
source/gloperate-glkernel/: CMakeLists.txt
source/gloperate-glraw/: CMakeLists.txt
source/gloperate-headless/: CMakeLists.txt
source/gloperate-hidapi/: CMakeLists.txt
source/gloperate-osg/: CMakeLists.txt
source/gloperate-qt/: CMakeLists.txt
source/gloperate-qtapplication/: CMakeLists.txt
source/gloperate-qtquick/: CMakeLists.txt
source/gloperate-qtwidgets/: CMakeLists.txt
source/gloperate-text/: CMakeLists.txt
source/gloperate-viewer/: Application.cpp  Application.h  CMakeLists.txt  main.cpp
source/plugins/: CMakeLists.txt
source/tests/: CMakeLists.txt
source/tools/: CMakeLists.txt
(+1907 files in other folders)
